Fixing button overlap as per #2

--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -13,8 +13,6 @@ a{
 	padding:25px;
 	text-align:center;
 	color: #A3A3A1;
-	border: 1px solid rgb(80,112,158);
-	border-radius: 25px;
 }
 a:hover {
 	color:rgb(80, 112, 158);
@@ -41,12 +39,14 @@ h1{
 }
 
 .navclass{
-	width:100px;	
+	width:125px;	
 	display:flex;
 }
 #call-for-action{
 	background-color: #C5C4C9;
 	margin-top: 25px;
+	border-radius: 25px;
+	border: 1px solid rgb(80, 112, 158);
 }
 #nav-ul{
 	display:flex;
